--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,35 +1,12 @@
-@import '@/assets/css/base.css';
+/* Global styles */
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
+html {
+  /* Import fonts if required, and update the list accordingly */
+  /* font-family: 'Proza Libre', 'Inter var', 'Inter', 'Roboto', 'Helvetica Neue',
+    sans-serif; */
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+* {
+  -webkit-font-smoothing: auto;
+  -moz-osx-font-smoothing: auto;
 }
